# UartToX_RP2040

./: CLAUDE.md  CMakeLists.txt  README.md  README_EN.md
.claude/: settings.local.json
docs/: architecture.md  shell_commands.md  test_report.md
src/: main.c
src/common/: fifo_ipc.c  ring_buffer.c  utils.c
src/core0/: cmd_parser.c  response.c  shell.c  usb_cdc.c
src/core1/: gpio_ctrl.c  i2c_pio.c  protocol_manager.c  spi_pio.c  uart_pio.c
src/include/: tusb_config.h  uart_to_x.h
src/pio/: i2c.pio  spi.pio  uart_rx.pio  uart_tx.pio
